--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: John Doe # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  My name is Olivia Larson, I am a graduate student at the University of Oklahoma studying Geospatial Technologies.  
   <br><br>
-  Second description 
+  I currently live and work full time in Orem, Utah as a geospatial analyst for the City of Orem. 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
