--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Doe # your name (or website title) here
+title: Olivia Larson # your name (or website title) here
 logo: "/images/IMG_0679.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My name is Olivia Larson, I am a graduate student at the University of Oklahoma studying Geospatial Technologies.  
